# esbmc

./: .gitignore  404.html  BUILDING.md  CMakeLists.txt  case2_output.txt  chatbot_hibrido.py  ddpg_verification_data.json  ddpg_weights_q88.json  generated_code.c  index.html  index.txt  nn_desconto_esbmc.c  run_chatbot.sh  training_history.json
pibic/: add_100_cases.py  esbmc_genai_guide.md  generate_100_prd.py  mock_llm.py  prd.json  print_net_output  pyproject.toml  qnn_report.md  qnnverifier_explanation.md  ralph_loop_esbmc.sh  ralph_prd.json  recreate_prd.py  requirements.txt  roadmap.md  test.md
pibic/1_python_models/: README.md  mlp.py  neuron.py
pibic/2_inference_engine/: README.md  attention_kernel.cpp  matmul_kernel.cpp  run_benchmark.py
pibic/3_neuro_symbolic/: README.md  generated_code.c  mock_agent.py
pibic/4_control_system/: pid_controller.c  test_chaos.py
pibic/QNNVerifier/: README.txt  convert_hdf5_model.py  keras2c_injectfxp.java  nnet2onnx.py  qnnverifier.txt  readvnnlib.py  test_onnx_output.py  test_onnx_output_eachlayer.py
pibic/apresentacao/: apresentacao_pibic.aux  apresentacao_pibic.nav  apresentacao_pibic.out  apresentacao_pibic.tex  apresentacao_pibic.toc  apresentacao_pibic.vrb
pibic/artigo/: referencias.bib  relatorio.aux  relatorio.bbl  relatorio.blg  relatorio.brf  relatorio.lof  relatorio.tex  relatorio.toc
pibic/cartpole/: ESBMC_NOTES.md  architecture_diagram.html  backend.py  cartpole_env.py  closed_loop_results.json  closedloop_esbmc_stub.c  ddpg_actor.pth  ddpg_actor_best.pth  ddpg_agent.py  ddpg_closed_loop_results.json  (+23 more)
(+258 files in other folders)
